--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang = "en">
 <head>
     <meta charset = "UTF-8">
-    <title>Title</title>
+    <meta name = "viewport" content = "width=device-width, initial-scale=1">
+    <link rel = "stylesheet" href = "style.css">
+    <title>Alex's Website</title>
 </head>
 
 <header>
-    <h1>All of AlexW-578's and UnnNoticeable's VRChat Creations</h1>
-    <p>This page is dedicated to all the creation that we have made for VRChat.</p>
+    <h1>A Simple website for AlexW-578</h1>
+    <p>Link to our VRchat Creations</p>
 </header>
 <body>
 
