--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 
 <header>
-    <h1>A Simple website for AlexW-578</h1>
-    <p>Link to our VRchat Creations</p>
+    <h1>AlexW-578</h1>
+    <a href="/VRChat.html">Link to our VRchat Creations</a>
 </header>
 <body>
 
