--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <header>
     <h1>AlexW-578</h1>
-    <a href="/VRChat.html">Link to our VRchat Creations</a>
+    <a id = ButtonLaunch href = "/VRChat.html">Click to view VRchat creations</a>
 </header>
 <body>
 
