--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <link rel = "stylesheet" href = "style.css">
     <title>Alex's Website</title>
 </head>
-
-<header>
-    <h1>AlexW-578</h1>
-    <a id = mainButton href = "/VRChat.html">Click to view VRchat creations</a>
-</header>
 <body>
+<div class = "header">
+    <h1>AlexW-578</h1>
+</div>
+<div class="navbar">
+    <a href="#" class="active">Home</a>
+    <a href="/VRChat.html">VRChat</a>
+</div>
 
 </body>
 </html>
