--- a/VRChat.html
+++ b/VRChat.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
+<html lang = "en">
 <meta charset = "utf-8">
 <title>VRChat Creations</title>
-
 <meta name = "Viewpoint" content = "width=device-width,initial-scale=1">
-
 <link rel = "stylesheet" href = "style.css">
-
-<header>
+<body>
+<div class = "header">
     <h1>All of AlexW-578's and UnnNoticeable's VRChat Creations</h1>
     <p>This page is dedicated to all the creation that we have made for VRChat.</p>
-</header>
+</div>
+<div class = "navbar">
+    <a href = "/">Home</a>
+    <a href = "#" class = "active">VRChat</a>
+</div>
+
+</body>
+
 <body>
 <h2>Worlds</h2>
 <p>A List of all the worlds we have created.</p>
@@ -22,5 +28,5 @@
 <a id = ButtonLaunch href = "vrchat://launch?ref=AlexW-578.co.uk&id=wrld_aa170c02-dfaf-431b-bb5d-da18a6b00789">Launch
     World</a>
 </body>
-
+</html>
 
