--- a/VRChat.html
+++ b/VRChat.html
@@ -14,12 +14,10 @@
     <a href = "#" class = "active">VRChat</a>
 </div>
 
-</body>
-
-<body>
-<h2>Worlds</h2>
-<p>A List of all the worlds we have created.</p>
-
+<div class = "row">
+    <h2>Worlds</h2>
+    <p>A List of all the worlds we have created.</p>
+</div>
 <h3>Photo booth</h3>
 <img src = "https://d348imysud55la.cloudfront.net/thumbnails/file_0add2c0a-7781-4abf-8368-1d68b9316d50.07ae49f0e67add1d77b8585b1c33f6bb22c64e2eac775238a37c0f8039f62279.1.thumbnail-256.png"
      alt = "A Photo of Alex's Rex Face">
