--- a/e621.html
+++ b/e621.html
@@ -6,8 +6,7 @@
     <meta charset = "UTF-8">
     <title>Haha Funny</title>
 </head>
-<body class="e6">
-
+<body id="e6">
 <p>Nobody here but us chickens!</p>
 </body>
 </html>
