--- a/VRChat.html
+++ b/VRChat.html
@@ -6,7 +6,7 @@
 <link rel = "stylesheet" href = "style.css">
 <body>
 <div class = "header">
-    <h1>All of AlexW-578's and UnnNoticeable's VRChat Creations</h1>
+    <h1>All of AlexW-578's and JürgenWithWings's VRChat Creations</h1>
     <p>This page is dedicated to all the creation that we have made for VRChat.</p>
 </div>
 <div class = "navbar">
