--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 <div class = "header">
     <h1>AlexW-578</h1>
 </div>
-<div class="navbar">
-    <a href="#" class="active">Home</a>
-    <a href="/VRChat.html">VRChat</a>
+<div class = "navbar">
+    <a href = "#" class = "active">Home</a>
+    <a href = "/VRChat.html">VRChat</a>
 </div>
-
+<script type = 'text/javascript' src = 'https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script>
+<script type = 'text/javascript'>kofiwidget2.init('Buy me a hot choc if you really want to.', '#24fd30', 'L4L2956M0');
+kofiwidget2.draw();</script>
 </body>
 </html>
