Added Revision Links

--- a/VRChat.html
+++ b/VRChat.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang = "en">
-<meta charset = "utf-8">
-<title>VRChat Creations</title>
-<meta name = "Viewpoint" content = "width=device-width,initial-scale=1">
-<link rel = "stylesheet" href = "style.css">
+<head>
+    <meta charset = "utf-8">
+    <title>VRChat Creations</title>
+    <meta name = "Viewpoint" content = "width=device-width,initial-scale=1">
+    <link rel = "stylesheet" href = "style.css">
+</head>
 <body>
 <div class = "header">
     <h1>All of AlexW-578's and JürgenWithWings's VRChat Creations</h1>
@@ -12,12 +14,13 @@
 <div class = "navbar">
     <a href = "/">Home</a>
     <a href = "#" class = "active">VRChat</a>
+    <a href = "/Uni.html">Uni Stuff</a>
 </div>
 
-<div class = "row">
-    <h2>Worlds</h2>
-    <p>A List of all the worlds we have created.</p>
-</div>
+<h2>­</h2>
+<h2>Worlds</h2>
+<p>A List of all the worlds we have created.</p>
+
 <h3>Photo booth</h3>
 <img src = "https://d348imysud55la.cloudfront.net/thumbnails/file_0add2c0a-7781-4abf-8368-1d68b9316d50.07ae49f0e67add1d77b8585b1c33f6bb22c64e2eac775238a37c0f8039f62279.1.thumbnail-256.png"
      alt = "A Photo of Alex's Rex Face">
