--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <div class = "navbar">
     <a href = "#" class = "active">Home</a>
     <a href = "/VRChat.html">VRChat</a>
+    <a href = "/Uni.html">Uni Stuff</a>
 </div>
 <script type = 'text/javascript' src = 'https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script>
 <script type = 'text/javascript'>kofiwidget2.init('Buy me a hot choc if you really want to.', '#24fd30', 'L4L2956M0');
