--- a/UniLinks/AOSM.html
+++ b/UniLinks/AOSM.html
@@ -2,9 +2,18 @@
 <html lang = "en">
 <head>
     <meta charset = "UTF-8">
-    <title>Title</title>
+    <meta name = "viewport" content = "width=device-width, initial-scale=1">
+    <link rel = "stylesheet" href = "../style.css">
+    <title>Architecture and Operating Systems(Maths)</title>
 </head>
 <body>
-
+<div class = "header">
+    <h1>Architecture and Operating Systems(Maths)</h1>
+</div>
+<div class = "navbar">
+    <a href = "/">Home</a>
+    <a href = "/VRChat.html">VRChat</a>
+    <a href = "#">Uni Stuff</a>
+</div>
 </body>
 </html>
