changed the style

--- a/Uni.html
+++ b/Uni.html
@@ -15,22 +15,23 @@
     <a href = "/VRChat.html">VRChat</a>
     <a href = "#">Uni Stuff</a>
 </div>
-<h3 class="topic">Quick Links</h3>
-<a class = "ButtonLaunch" href = "https://portal.myport.ac.uk/student/timetable/">Time Table</a>
-<a class = "ButtonLaunch" href = "https://moodle.port.ac.uk/my/">Moodle</a>
+<div class = "row">
+    <h3 class = "topic">Quick Links</h3>
+    <a class = "ButtonLaunch" href = "https://portal.myport.ac.uk/student/timetable/">Time Table</a>
+    <a class = "ButtonLaunch" href = "https://moodle.port.ac.uk/my/">Moodle</a>
 
 
-<h3>Assignment Stuff</h3>
-<a class = "ButtonLaunch" href = "https://portsoc.github.io/wordcount/">Online Word counter</a>
+    <h3>Assignment Stuff</h3>
+    <a class = "ButtonLaunch" href = "https://portsoc.github.io/wordcount/">Online Word counter</a>
 
-<h3>Revision Links</h3>
-<a class = "ButtonLaunch" href = "/UniLinks/General.html">General</a>
-<a class = "ButtonLaunch" href = "/UniLinks/Programming.html">Programming</a>
-<a class = "ButtonLaunch" href = "/UniLinks/CCC.html">Core Computing Concepts</a>
-<a class = "ButtonLaunch" href = "/UniLinks/CyberSec.html">Cyber Security and Digital Forensics</a>
-<a class = "ButtonLaunch" href = "/UniLinks/SysAdmin.html">System Administration and Inter-networking</a>
-<a class = "ButtonLaunch" href = "/UniLinks/AOS.html">Architecture and Operating Systems</a>
-<a class = "ButtonLaunch" href = "/UniLinks/AOSM.html">Architecture and Operating Systems(Maths)</a>
-
+    <h3>Revision Links</h3>
+    <a class = "ButtonLaunch" href = "/UniLinks/General.html">General</a>
+    <a class = "ButtonLaunch" href = "/UniLinks/Programming.html">Programming</a>
+    <a class = "ButtonLaunch" href = "/UniLinks/CCC.html">Core Computing Concepts</a>
+    <a class = "ButtonLaunch" href = "/UniLinks/CyberSec.html">Cyber Security and Digital Forensics</a>
+    <a class = "ButtonLaunch" href = "/UniLinks/SysAdmin.html">System Administration and Inter-networking</a>
+    <a class = "ButtonLaunch" href = "/UniLinks/AOS.html">Architecture and Operating Systems</a>
+    <a class = "ButtonLaunch" href = "/UniLinks/AOSM.html">Architecture and Operating Systems(Maths)</a>
+</div>
 </body>
 </html>
