--- a/UniLinks/CCC.html
+++ b/UniLinks/CCC.html
@@ -15,5 +15,13 @@
     <a href = "/VRChat.html">VRChat</a>
     <a href = "#">Uni Stuff</a>
 </div>
+<h2>­</h2>
+<div class = "row">
+    <h3>Web</h3>
+    <a class = "ButtonLaunch" href = "https://moodle.port.ac.uk/mod/quiz/view.php?id=2034067">Mock exam (non-Cyber Sec)</a>
+    <a class = "ButtonLaunch" href = "https://moodle.port.ac.uk/mod/quiz/view.php?id=2034067">Mock exam (Cyber Sec)</a>
+    <h3>SQL</h3>
+    <a class = "ButtonLaunch" href = "https://docs.google.com/document/d/1VDTXaTEs38kqlBmQHuz8My98AG2SJgs72ZuSbZM37Eg/edit?usp=sharing">Mock exam (Un-Official by Rhys)</a>
+</div>
 </body>
 </html>
