--- a/UniLinks/AOS.html
+++ b/UniLinks/AOS.html
@@ -15,5 +15,10 @@
     <a href = "/VRChat.html">VRChat</a>
     <a href = "#">Uni Stuff</a>
 </div>
+<h2>­</h2>
+<div class = "row">
+    <h3></h3>
+    <a class = "ButtonLaunch" href = "https://moodle.port.ac.uk/mod/quiz/view.php?id=1774400">Mock exam </a>
+</div>
 </body>
 </html>
