--- a/e621.html
+++ b/e621.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = "en">
 <meta name = "Viewpoint" content = "width=device-width,initial-scale=1">
-<link rel = "stylesheet" href = "style.css">
+<link rel = "stylesheet" href = "CSS/style.css">
 <head>
     <meta charset = "UTF-8">
     <title>Haha Funny</title>
