--- a/Uni.html
+++ b/Uni.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset = "UTF-8">
     <meta name = "viewport" content = "width=device-width, initial-scale=1">
-    <link rel = "stylesheet" href = "style.css">
+    <link rel = "stylesheet" href = "CSS/style.css">
     <title>Uni Stuff</title>
 </head>
 <body>
@@ -12,7 +12,6 @@
 </div>
 <div class = "navbar">
     <a href = "/">Home</a>
-    <a href = "/VRChat.html">VRChat</a>
     <a href = "#">Uni Stuff</a>
 </div>
 <h3>­</h3>
@@ -26,13 +25,7 @@
     <a class = "ButtonLaunch" href = "https://portsoc.github.io/wordcount/">Online Word counter</a>
 
     <h3>Revision Links</h3>
-    <a class = "ButtonLaunch" href = "/UniLinks/General.html">General</a>
-    <a class = "ButtonLaunch" href = "/UniLinks/Programming.html">Programming</a>
-    <a class = "ButtonLaunch" href = "/UniLinks/CCC.html">Core Computing Concepts</a>
-    <a class = "ButtonLaunch" href = "/UniLinks/CyberSec.html">Cyber Security and Digital Forensics</a>
-    <a class = "ButtonLaunch" href = "/UniLinks/SysAdmin.html">System Administration and Inter-networking</a>
-    <a class = "ButtonLaunch" href = "/UniLinks/AOS.html">Architecture and Operating Systems</a>
-    <a class = "ButtonLaunch" href = "/UniLinks/AOSM.html">Architecture and Operating Systems(Maths)</a>
+
 </div>
 </body>
 </html>
