--- a/VRChat.html
+++ b/VRChat.html
@@ -4,7 +4,7 @@
     <meta charset = "utf-8">
     <title>VRChat Creations</title>
     <meta name = "Viewpoint" content = "width=device-width,initial-scale=1">
-    <link rel = "stylesheet" href = "style.css">
+    <link rel = "stylesheet" href = "CSS/style.css">
 </head>
 <body>
 <div class = "header">
